<resources>
    // fragment start
    <string name="app_name">LIVREca</string>
    <string name="login">Am deja un cont</string>
    <string name="Register">Sunt nou aici</string>
    <string name="welcome">Bine ai venit!</string>
    <string name="title">LivreCa</string>

    // fragment login and register
    <string name="username">Nume de utilizator</string>
    <string name="password">Parola</string>
    <string name="login_button">Conectare</string>
    <string name="email" >Email</string>
    <string name="register_button" >Înregistrare</string>
    <string name="login_message" >Hai să ne cunoaștem! </string>
    <string name="register_message" >Bine ai revenit! </string>

    // fragment book list
    <string name="book_name" >Numele cărții</string>
    <string name="book_author" >Autor</string>
    <string name="book_genre" >Gen</string>
    <string name="book_progress" >Progres (%)</string>
    <string name="save_book" >Salvează cartea</string>
    <string name="book_saved" >Cartea a fost salvată cu succes!</string>
    <string name="add_book" >Adaugă o carte</string>
    <string name="dark_mode">"Dark mode "</string>
    <string name="calculate_percentage">Calculează progres</string>
    <string name="progress_update_message">Ai citit 0% din carte</string>
    <string name="add_number_of_pages">Introdu numărul paginii la care ai ajuns</string>
    <string name="book_title">Titlul cărții</string>
    <string name="progres_view">Progres: 0%</string>


</resources>