<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/tv_app_name"
        style="@style/TEXTVIEW"
        android:layout_width="wrap_content"
        android:layout_height="136dp"
        android:fontFamily="@font/ingrid_darling"
        android:text="@string/title"
        android:textSize="120sp" />


    <TextView
        android:id="@+id/tv_welcome_message"
        style="@style/TEXTVIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/jacques_francois_shadow"
        android:text="@string/welcome"
        android:textSize="30sp" />


    <Button
        android:id="@+id/btn_new_here"
        style="@style/BUTTON"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/jacques_francois"
        android:padding="10dp"
        android:text="@string/Register"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_already_have_account"
        style="@style/BUTTON"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jacques_francois"
        android:padding="10dp"
        android:text="@string/login"
        android:textSize="25sp" />




</LinearLayout>
